<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/layout">

    <EditText
        android:id="@+id/class_1_GPA"
        android:layout_width="92dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="64dp"
        android:digits="0123456789"
        android:maxLength="3"
        android:hint="@string/enter_GPA"
        android:importantForAutofill="no"
        android:inputType="number|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toEndOf="@+id/class_string1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/class_3_GPA"
        android:layout_width="92dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="160dp"
        android:digits="0123456789"
        android:maxLength="3"
        android:hint="@string/enter_GPA"
        android:importantForAutofill="no"
        android:inputType="number|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toEndOf="@+id/class_string3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/class_5_GPA"
        android:layout_width="92dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="256dp"
        android:digits="0123456789"
        android:maxLength="3"
        android:hint="@string/enter_GPA"
        android:importantForAutofill="no"
        android:inputType="number|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toEndOf="@+id/class_string5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/finalDisplay"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="388dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="388dp"
        android:text="@string/final_GPA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="308dp"
        android:text="@string/comp_GPA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/class_string3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:text="@string/class_string3"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/class_string5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:text="@string/class_string5"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/class_4_GPA"
        android:layout_width="92dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="208dp"
        android:digits="0123456789"
        android:maxLength="3"
        android:hint="@string/enter_GPA"
        android:importantForAutofill="no"
        android:inputType="number|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toEndOf="@+id/class_string4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/class_string2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/class_string2"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/class_string1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/class_string1"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/class_string4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:text="@string/class_string4"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/class_2_GPA"
        android:layout_width="92dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="112dp"
        android:digits="0123456789"
        android:maxLength="3"
        android:hint="@string/enter_GPA"
        android:importantForAutofill="no"
        android:inputType="number|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toEndOf="@+id/class_string2"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>